Fixed insta tag alignment

--- a/css/main.css
+++ b/css/main.css
@@ -2522,7 +2522,7 @@ textarea {
     color: #BED38E;
     letter-spacing: 3px;
     font-weight: bold;
-    margin: 20px 7px;
+    margin: 20px 17px;
   }
 
   .instagram-slider .content-wrapper {
